Succesful in playing the game, putting the game variable including the score to the highscore activity. An alertmessages shows to ask for the player's name. TODO: creating a highscores list, connecting it to the server thing and displaying 10 highscores, or something like that

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="category_array">
         <item>Any Category</item>
-        <item>Generial Knowledge</item>
+        <item>General Knowledge</item>
         <item>Entertainment: Books</item>
         <item>Entertainment: Film</item>
         <item>Entertainment: Music</item>
