--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     android:background="#AE6180A0">
 
     <TextView
-        android:id="@+id/categoryView"
+        android:id="@+id/infoView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -30,7 +30,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryView" />
+        app:layout_constraintTop_toBottomOf="@+id/infoView" />
 
     <View
         android:id="@+id/view3"
@@ -51,7 +51,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="Question: "
-        android:textColor="#D81B60"
+        android:textColor="#D32F2F"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/outOfView"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
