--- a/app/src/main/res/layout/scores_row.xml
+++ b/app/src/main/res/layout/scores_row.xml
@@ -31,8 +31,22 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/infoView"
+            android:id="@+id/difficultyView"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/categoryView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/typeView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView" />
